--- a/admin.html
+++ b/admin.html
@@ -211,7 +211,7 @@
             function ajaxRead(fileName) {
                 $.ajax({
                     type: 'GET',
-                    url: currentFile + '.json',
+                    url: fileName + '.json',
                     dataType: 'json',
                     contentType: 'application/json',
                     crossDomain: true,
