--- a/admin.html
+++ b/admin.html
@@ -145,12 +145,17 @@
                             id: "item",
                             defaultProperties: [
                                 "tag",
+                                "id",
                                 "linkurl",
                                 "jsonurl",
                                 "description",
                                 "List"
                             ],
                             properties: {
+                                id: {
+                                    title: "ID",
+                                    type: "string"
+                                },
                                 tag: {
                                     title: "Tag",
                                     type: "string"
