--- a/admin.html
+++ b/admin.html
@@ -153,6 +153,7 @@
                                 "description",
                                 "List"
                             ],
+                            required: ["id", "tag"],
                             properties: {
                                 id: {
                                     title: "ID",
