--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script id="entry-template" type="text/x-handlebars-template">
 
         <nav class="navbar navbar-fixed-top" id="topNav" style="margin: 0; padding-left: 20px; padding-top: 4px; padding-right: 20px;">
-            <ul class="nav nav-tabs" style="width:100%; background-color:whitesmoke; border-top: 2px solid #31708f;  border-left: 2px solid #31708f;  border-right: 2px solid #31708f; padding-top: 5px; padding-left: 10px; padding-right: 10px;" onclick="scrollToTopLeft(); closeSliders();">
+            <ul class="nav nav-tabs" style="width:100%; padding-top: 5px; padding-left: 10px; padding-right: 10px;">
                 {{#each List}}
                     <li title="" style="border-bottom-width: 0px; padding-top: 1px;">
                         <a data-toggle="tab" href="#tab{{this.tag}}">
@@ -72,7 +72,44 @@
         <div class="tab-content" style="margin-top:60px;">
             {{#each List}}
                 <div id="tab{{this.tag}}" class="tab-pane">
-                    {{this.tag}}
+                    <h2>
+                        {{this.tag}}
+                    </h2>
+                    <ul>
+                      {{#each this.List}}
+                        <li>
+                            {{this.tag}}
+                            <ul>
+                              {{#each this.List}}
+                                <li>
+                                    {{this.tag}}
+                                    <ul>
+                                      {{#each this.List}}
+                                        <li>
+                                            {{this.tag}}
+                                            <ul>
+                                              {{#each this.List}}
+                                                <li>
+                                                    {{this.tag}}
+                                                    <ul>
+                                                      {{#each this.List}}
+                                                        <li>
+                                                            {{this.tag}}
+                                                        </li>
+                                                      {{/each}}
+                                                    </ul>                                                    
+                                                </li>
+                                              {{/each}}
+                                            </ul>                                            
+                                        </li>
+                                      {{/each}}
+                                    </ul>
+                                </li>
+                              {{/each}}
+                            </ul>                            
+                        </li>
+                      {{/each}}
+                    </ul>
                 </div>
             {{/each}}
         </div>
