--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </ul>
         </nav>
         
-        <div class="tab-content" style="margin-top:60px; width:100%; margin-left:30px; margin-right:30px; padding:10px 10px 10px 10px; border:1px solid black;">
+        <div class="tab-content" style="margin:60px 30px 30px 30px; width:100%; padding:0px 10px 10px 10px; border:1px solid black; min-height: 100vh;">
             {{#each List}}
                 <div id="tab{{this.tag}}" class="tab-pane">
                     <h3>
